Реализует стили Всплывающего блока элемента "Вход" в Навигации

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -312,10 +312,6 @@ textarea.field {
   background-image: url("../images/icons/arrow-up.svg");
 }
 
-.dropdown:hover .nav-drop {
-  display: block;
-}
-
 .nav-link {
   display: block;
   padding: 6px 13px;
@@ -402,6 +398,11 @@ textarea.field {
   margin: 4px auto;
 
   background-color: #b9b9b9;
+}
+
+.dropdown:hover .dropdown-container,
+.dropdown:focus-within .dropdown-container {
+  display: block;
 }
 
 .nav-drop-link:hover,
@@ -520,18 +521,82 @@ textarea.field {
   color: #2d3440;
 
   background-color: #fcfcfc;
-  border: 1px solid #b9b9b9;
   border-radius: 4px;
-}
-
-.user-item-search:hover .search,
-.user-item-search:focus-within .search {
-  display: block;
 }
 
 .text-login {
   margin-left: 6px;
 }
+
+/* Всплывающий блок */
+
+.login {
+  right: 0;
+
+  width: 420px;
+  padding: 49px 48px 52px 48px;
+}
+
+.login-title {
+  margin: 0 0 31px;
+}
+
+.login-input {
+  margin-bottom: 15px;
+  padding: 14px 16px;
+
+  font-size: 16px;
+  line-height: 20px;
+  font-family: inherit;
+  color: #2d3440;
+
+  background-color: #fcfcfc;
+  border: none;
+  border-radius: 4px;
+  outline: 1px solid #b9b9b9;
+}
+
+.login-wrapper {
+  display: grid;
+  margin-top: 18px;
+
+  gap: 22px;
+  grid-template-columns: auto 1fr;
+}
+
+.login-button {
+  width: 113px;
+}
+
+.login-link {
+  display: inline-block;
+
+  font-size: 14px;
+  line-height: 20px;
+  vertical-align: baseline;
+  color: #2d3440;
+  text-decoration: 1px;
+
+  text-decoration-color: inherit;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-underline-offset: 4px;
+}
+
+.login-link:hover {
+  opacity: 0.6;
+}
+
+.login-link:focus-visible {
+  outline: none;
+  opacity: 0.6;
+}
+
+.login-link:active {
+  opacity: 0.3;
+}
+
+/* Всплывающий блок */
 
 .basket-counter {
   margin-left: 6px;
