--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1419,7 +1419,78 @@ textarea.field {
 }
 
 .order-form-label {
+  margin-right: 5px;
+
   font-weight: 700;
+}
+
+.order-form-tooltip {
+  display: flex;
+  align-items: center;
+}
+
+.order-tooltip {
+  position: relative;
+}
+
+.order-tooltip-text {
+  position: absolute;
+  top: -18px;
+  left: 30px;
+
+  display: none;
+  width: 150px;
+  margin: 0;
+  padding: 10px 8px 10px 15px;
+
+  font-size: 12px;
+  line-height: 16px;
+  color: #565c66;
+
+  background-color: #fcfcfc;
+  border: 1px solid #b9b9b9;
+  border-radius: 1px;
+  box-shadow: 0 2px 12px rgba(173, 152, 143, 0.18);
+}
+
+.order-tooltip-text::after {
+  content: "";
+  position: absolute;
+  top: 16px;
+  left: -8px;
+
+  width: 14px;
+  height: 14px;
+
+  background-color: #fcfcfc;
+  border: 1px solid #b9b9b9;
+  border-top: none;
+  border-right: none;
+  transform: rotate(45deg);
+}
+
+.order-tooltip-toggle {
+  display: block;
+  width: 14px;
+  height: 14px;
+  padding: 0;
+
+  background-color: transparent;
+  background-image: url("../images/icons/tooltip.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 0;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.order-tooltip-toggle:focus-visible {
+  outline: none;
+}
+
+.order-tooltip:hover .order-tooltip-text,
+.order-tooltip:focus-within .order-tooltip-text {
+  display: block;
 }
 
 .order-form-button {
