Исправляет реализацию Всплывающего блока Логин

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -538,16 +538,16 @@ li:nth-child(2) .nav-link {
   right: 0;
 
   width: 420px;
-  padding: 49px 48px 52px 48px;
+  padding: 55px 48px 52px 49px;
 }
 
 .login-title {
-  margin: 0 0 31px;
+  margin: 0 0 36px;
 }
 
 .login-input {
   margin-bottom: 15px;
-  padding: 14px 16px;
+  padding: 14px 84px 14px 16px;
 
   font-size: 16px;
   line-height: 20px;
@@ -558,6 +558,14 @@ li:nth-child(2) .nav-link {
   border: none;
   border-radius: 4px;
   outline: 1px solid #b9b9b9;
+}
+
+input:nth-of-type(1) {
+  margin-bottom: 16px;
+}
+
+input:nth-of-type(2) {
+  padding: 13px 88px 14px 11px;
 }
 
 .login-wrapper {
