:heavy_check_mark: Сборка #9

--- a/9/styles/styles.css
+++ b/9/styles/styles.css
@@ -583,10 +583,14 @@ input[type="password"] {
   line-height: 20px;
   vertical-align: baseline;
   color: #2d3440;
+  -webkit-text-decoration: 1px;
   text-decoration: 1px;
 
+  -webkit-text-decoration-color: inherit;
   text-decoration-color: inherit;
+  -webkit-text-decoration-line: underline;
   text-decoration-line: underline;
+  -webkit-text-decoration-style: solid;
   text-decoration-style: solid;
   text-underline-offset: 4px;
 }
@@ -619,8 +623,20 @@ input[type="password"] {
   padding: 48px 48px 15px;
 }
 
+.basket-content-empty {
+  display: none;
+  width: 288px;
+  height: 156px;
+  padding: 48px 20px 15px;
+}
+
 .basket-title {
   margin: 0 0 32px;
+}
+
+.basket-content-empty .basket-title {
+  line-height: 30px;
+  text-align: center;
 }
 
 .basket-list {
@@ -1817,6 +1833,7 @@ input[type="password"] {
   border-radius: 20px;
   cursor: pointer;
 
+  -webkit-appearance: none;
   appearance: none;
 }
 
@@ -1864,6 +1881,7 @@ input[type="password"] {
   background-color: transparent;
   border: none;
 
+  -webkit-appearance: textfield;
   appearance: textfield;
 }
 
@@ -2010,6 +2028,7 @@ input[type="number"]::-webkit-inner-spin-button {
   border-radius: 50%;
   cursor: pointer;
 
+  -webkit-appearance: none;
   appearance: none;
 }
 
@@ -2077,6 +2096,7 @@ input[type="number"]::-webkit-inner-spin-button {
   border: none;
   cursor: pointer;
 
+  -webkit-appearance: none;
   appearance: none;
 }
 
