--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2280,15 +2280,17 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .modal-window {
   position: fixed;
+  top: 0;
+  left: 0;
   z-index: 5;
 
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 1366px;
-  height: auto;
+  width: 100%;
+  height: 100%;
 
-  background-color: rgba(45, 52, 64, 0.3);
+  background-color: rgba(0, 0, 0, 0.3);
   border: none;
 
   inset: 0;
