--- a/9/styles/styles.css
+++ b/9/styles/styles.css
@@ -1754,10 +1754,28 @@ input[type="password"] {
   text-decoration: none;
 
   border-bottom: 1px solid transparent;
+
+  transition: transform 0.5s;
+}
+
+.breadcrumbs-link:hover {
+  opacity: 0.5;
+}
+
+.breadcrumbs-link:focus-visible {
+  outline: none;
+  opacity: 0.5;
+}
+
+.breadcrumbs-link:active {
+  transform: scale(0.8);
 }
 
 .breadcrumbs-link-current {
   border-color: currentColor;
+  cursor: default;
+
+  pointer-events: none;
 }
 
 .breadcrumbs-item {
@@ -2261,19 +2279,21 @@ input[type="number"]::-webkit-inner-spin-button {
 /* Модальное окно */
 
 .modal-window {
-  position: absolute;
-  top: 2879px;
-  right: 35%;
+  position: fixed;
+  top: 0;
+  left: 0;
   z-index: 5;
 
-  display: none;
-  width: 570px;
-  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 
-  background-color: #fcfcfc;
+  background-color: rgba(0, 0, 0, 0.3);
   border: none;
-  border-radius: 8px;
-  box-shadow: 0 15px 40px 0 rgba(45, 52, 64, 0.12);
+
+  inset: 0;
 }
 
 .modal-window::backdrop {
@@ -2281,10 +2301,20 @@ input[type="number"]::-webkit-inner-spin-button {
   opacity: 0.3;
 }
 
+.modal-window-open {
+  display: none;
+}
+
 .modal-auth {
   position: relative;
 
+  width: 570px;
+  margin: auto;
   padding: 64px 64px 66px 64px;
+
+  background-color: #fcfcfc;
+  border-radius: 8px;
+  box-shadow: 0 15px 40px 0 rgba(45, 52, 64, 0.12);
 }
 
 .modal-title {
