Исправление реализации поля Телефон в Форме для заказа
TEST-04. Переполнение
- при добавлении даты поле телефона уменьшается

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1452,6 +1452,10 @@ input[type="password"] {
   gap: 9px;
 }
 
+.order-form-item-tel {
+  grid-column: span 1 / -1;
+}
+
 .order-form-item-address {
   grid-column: 1/-1;
 }
